fixed: css styles text-align center

--- a/movie_frontend/src/App.css
+++ b/movie_frontend/src/App.css
@@ -31,4 +31,5 @@
   border-radius: 5px;
   font-size: 1.2rem;
   border-radius: 30px 0 0 30px;
+  text-align: center;
 }
